Add versioning to endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
+server.servlet.context-path=/v1
 spring.data.mongodb.uri=mongodb://localhost:27017/starwars
 logging.level.com.challenge.starwars=DEBUG
