Add actuator to project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,18 @@
 server.servlet.context-path=/v1
-spring.data.mongodb.uri=mongodb://localhost:27017/starwars
+
+# Log
 logging.level.com.challenge.starwars=DEBUG
+
+# Mongo
+spring.data.mongodb.uri=mongodb://localhost:27017/starwars
+
+# Actuator
+management.endpoints.web.base-path=/
+
+# Actuator Health
+management.endpoint.health.show-details=always
+
+# Actuator Info
+info.app.name=Star Wars API
+info.app.description=Challenge Star Wars API
+info.app.version=1.0.0
