Add feign and hystrix to project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,16 @@ logging.level.com.challenge.starwars=DEBUG
 # Mongo
 spring.data.mongodb.uri=mongodb://localhost:27017/starwars
 
+# swapi config
+swapi.url=https://swapi.dev/api
+
+### Hystrix config - https://github.com/Netflix/Hystrix/wiki ###
+hystrix.command.default.execution.timeout.enabled=true
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
+hystrix.command.default.metrics.rollingStats.timeInMilliseconds=5000
+hystrix.command.default.circuitBreaker.errorThresholdPercentage=40
+hystrix.command.default.circuitBreaker.requestVolumeThreshold=2
+
 # Actuator
 management.endpoints.web.base-path=/
 
