--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,13 @@ services:
     volumes:
       - starwars-data:/data/db
 
+  starwars-redis-db:
+    image: redis:latest
+    ports:
+      - 6380:6380
+      - 6379:6379
+    volumes:
+      - starwars-data:/data
+
 volumes:
   starwars-data:
