--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,35 @@
+# Dev settings
+spring.devtools.add-properties=true
+
+# Versioning
 server.servlet.context-path=/v1
 
 # Log
 logging.level.com.challenge.starwars=DEBUG
-
-# Mongo
-spring.data.mongodb.uri=mongodb://localhost:27017/starwars
 
 # swapi config
 swapi.url=https://swapi.dev/api
 
 ### Hystrix config - https://github.com/Netflix/Hystrix/wiki ###
 hystrix.command.default.execution.timeout.enabled=true
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
-hystrix.command.default.metrics.rollingStats.timeInMilliseconds=5000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=3000
+hystrix.command.default.metrics.rollingStats.timeInMilliseconds=10000
 hystrix.command.default.circuitBreaker.errorThresholdPercentage=40
-hystrix.command.default.circuitBreaker.requestVolumeThreshold=2
+hystrix.command.default.circuitBreaker.requestVolumeThreshold=10
+
+# Mongo
+spring.data.mongodb.uri=mongodb://localhost:27017/starwars
+
+# Redis
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.redis.time-to-live=20m
+spring.cache.redis.cache-null-values=false
 
 # Actuator
 management.endpoints.web.base-path=/
+management.endpoints.web.exposure.include=*
 
 # Actuator Health
 management.endpoint.health.show-details=always
