Controller integration tests

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	testCompile("de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.2.0")
 }
 
 test {
