--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,10 +20,8 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
-    - task: Docker@2
-      displayName: Build an image
+    - task: DockerCompose@0
+      displayName: Run aplication for tests
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
+        dockerComposeFile: '$(Build.SourcesDirectory)/docker-compose.yml '
+        dockerComposeCommand: up
